--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "0.0.19",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "mongoose": "^8.4.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "2.1.4",
     "resend": "^3.3.0",
     "zod": "^3.23.8"
   },
